fix(App.css): leaving things centered horizontally, but dont let vertical stretch

--- a/custome/src/App.css
+++ b/custome/src/App.css
@@ -162,7 +162,7 @@ a:hover{
   background: #ddd;
   justify-content: center;
   padding-bottom: 40px;
-
+  align-content: flex-start;
 }
 
 .Card {
